# vllm-tcu-plugin-demo

./: .gitignore  CMakeLists.txt  README.md  llama.py  log.txt  setup.py  test_custom_ops.py  test_import_vllm_plugin.py  test_plugins.py  ut_single_vllm_layer_tcu_2token.py
csrc/: torch_bindings.cpp
torch_tcu/: Aten.h  CMakeLists.txt  op_implements.h  readme.txt  setup.py  torch_tcu.cpp  ut_Attension_newBackEnd.py  ut_DeepSeek_Llama8B.py  ut_base_op.py  ut_linear.py  ut_load_callbackend_modelR50.py  ut_rotary_emb.py  ut_set_device_idx.py  ut_sincos.py  ut_single_layer_gpu_2token.py  ut_single_layer_tcu_2token.py
torch_tcu/op_impl_cpu/: op_implements.cpp
torch_tcu/op_libtorch_tests/: op_libtorch_test.cpp
torch_tcu/ops_unit_tests/: ops_utils.py  ut_arange.py  ut_as_strided.py  ut_cpu_pin_mem.py  ut_custom_rms_norm_tcu.py  ut_div.py  ut_einsum.py  ut_matmul.py  ut_narrow.py  ut_softmax.py  ut_to.py  ut_view.py
vllm_tcu/: __init__.py  envs.py  models.py  platform.py
vllm_tcu/attention/: attention.py
vllm_tcu/distributed/: communicator.py
vllm_tcu/kernels/: _custom_ops.py
vllm_tcu/model/: gqa.py  pag_att.py
vllm_tcu/worker/: model_runner.py  worker.py
